feat: implement Create Product API with Cloudinary upload and UnitConversion
- Add Cloudinary SDK (cloudinary-http45) to pom.xml and configure credentials
- Update ProductStatus enum: DRAFT / ACTIVE / INACTIVE (replaces PUBLISHED/HIDDEN)
- Update ProductVariant entity: add formulation, packaging, unit, imagePublicId fields
- Update ProductImage entity: add publicId field for Cloudinary cleanup
- Add UnitConversion entity with unique constraint (variant_id, from_unit, to_unit)
- Add UnitConversionRepository
- Add CloudinaryConfig bean and CloudinaryService (upload + delete)
- Add ApiResponse<T> generic wrapper { success, data, message }
- Add CreateProductRequest, VariantRequest, UnitConversionRequest DTOs with validation
- Add CreateProductResponse, ProductVariantResponse, UnitConversionResponse DTOs
- Refactor ProductService: new createProduct() accepts MultipartFile for images,
  validates category existence, deduplicates SKUs, saves unit conversions;
  legacy updateProduct() kept for backward compatibility
- Update ProductController: POST /api/products now consumes multipart/form-data
  (parts: data JSON + productImages + variantImages), returns HTTP 201
- Add DataIntegrityViolationException handler (409) in ApiExceptionHandler
- Fix circular JSON reference: add @JsonIgnore on Category.children,
  Brand.products, ProductImage.product to prevent nesting depth overflow
- Fix N+1 query: add findAllWithDetails() with LEFT JOIN FETCH brand/category/images
- Add deleteUnitConversionsByProduct() to ProductRepository for correct delete order

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>